# Speech-to-Insights

./: README.md  S2I_user_permissions.json  allow-sagemaker-invoke.json  notif.json  response.json  s2i_put_policy.json  sagemaker_exec_policy.json
backend/: S2I_user_permissions.json  app.py  ci_workflow.yml  deploy_lambdas.sh  embedding.py  handlers.py  iam_policies.json  indexer.py  lambda_handler.py  local_run.sh  pii_detector.py  pyproject.toml  requirements.txt  routes.py  step_fn_handlers.py  terraform_main.tf  terraform_vars.tf  test_api_upload.py  test_embedding_contract.py  transcribe.py  whisper.py
frontend/: README.html  about.html  admin.html  analytics.html  contact.html  credits.html  dashboard.html  help.html  index.html  nginx.conf  package-lock.json  profile.html  search.html  session-detail.html  sessions.html  upload.html
frontend/css/: animations.css  app.css  base.css  components.css  style.css
frontend/js/: admin.js  analytics.js  contact.js  dashboard.js  main.js  overview.js  profile.js  search.js  sessions.js  toast.js  upload.js
frontend/pages/: README.html  about.html  admin.html  analytics.html  contact.html  credits.html  dashboard.html  help.html  index.html  profile.html  search.html  session-detail.html  sessions.html  upload.html
frontend/pages/js/: admin.js  analytics.js  contact.js
